<package format="2">
  <name>first_project</name>
  <version>0.0.1</version>
  <description>First robotics project</description>
  <maintainer email="you@domain.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>tf</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rviz</exec_depend>

</package>
