<?xml version="1.0"?>
<package format="2">
  <name>first_project</name>
  <version>0.0.1</version>
  <description>
    Pacchetto ROS1 per il First Robotics Project: odometria da veicolo e GPS,
    calcolo dei tempi di settore.
  </description>
  <maintainer email="student@polimi.it">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
